--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".demo.livedata_viewmodel.MutableLiveDataActivity" />
+        <activity android:name=".demo.databinding_recyclerview.RecycleViewActivity" />
+        <activity android:name=".demo.databinding_twowaybind.TwoWayBindingActivity" />
+        <activity android:name=".demo.databinding.BookActivity" />
+        <activity android:name=".ui.home.HomeActivity" />
         <activity android:name=".ui.login.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
