添加了底部Tab导航、权限申请、全局异常捕获、文件下载四个模块

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
         <activity android:name=".demo.databinding_recyclerview.RecycleViewActivity" />
         <activity android:name=".demo.databinding_twowaybind.TwoWayBindingActivity" />
         <activity android:name=".demo.databinding.BookActivity" />
+        <activity android:name=".ui.tab_bar.TabBarActivity" />
         <activity android:name=".ui.home.HomeActivity" />
         <activity android:name=".ui.login.LoginActivity">
             <intent-filter>
