--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,4 +37,12 @@ dependencies {
 
     //MVVMHabit
     implementation project(':mvvmhabit')
+
+    //下拉刷新,上拉加载
+    implementation 'com.lcodecorex:tkrefreshlayout:1.0.7'
+
+    //底部tabBar
+    implementation('me.majiajie:pager-bottom-tab-strip:2.2.5') {
+        exclude group: 'com.android.support'
+    }
 }
