添加表单提交、表单编辑模块

--- a/mvvmhabit/build.gradle
+++ b/mvvmhabit/build.gradle
@@ -25,6 +25,11 @@ android {
 dependencies {
     api fileTree(include: ['*.jar'], dir: 'libs')
 
+    //support
+    api rootProject.ext.support["support-v4"]
+    api rootProject.ext.support["appcompat-v7"]
+    api rootProject.ext.support["recyclerview-v7"]
+
     //rxJava
     api rootProject.ext.dependencies.rxjava
     api rootProject.ext.dependencies.rxandroid
