--- a/config.gradle
+++ b/config.gradle
@@ -10,6 +10,27 @@ ext {
             versionName      : "1.0",
     ]
 
+
+    //version配置
+    versions = [
+            "support-version": "1.0.0",
+            "junit-version"  : "4.12",
+    ]
+
+
+    //support配置
+    support = [
+            'support-v4'              : "androidx.legacy:legacy-support-v4:${versions["support-version"]}",
+            'appcompat-v7'            : "androidx.appcompat:appcompat:${versions["support-version"]}",
+            'recyclerview-v7'         : "androidx.recyclerview:recyclerview:${versions["support-version"]}",
+            'support-v13'             : "androidx.legacy:legacy-support-v13:${versions["support-version"]}",
+            'support-fragment'        : "androidx.fragment:fragment:${versions["support-version"]}",
+            'design'                  : "com.google.android.material:material:${versions["support-version"]}",
+            'animated-vector-drawable': "androidx.vectordrawable:vectordrawable-animated:${versions["support-version"]}",
+            'junit'                   : "junit:junit:${versions["junit-version"]}",
+    ]
+
+
     //依赖第三方配置
     dependencies = [
             //rxJava
