--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
         <activity android:name=".demo.databinding_twowaybind.TwoWayBindingActivity" />
         <activity android:name=".demo.databinding.BookActivity" />
         <activity android:name=".ui.tab_bar.TabBarActivity" />
+        <activity android:name=".ui.viewpager.ViewPagerActivity" />
         <activity android:name=".ui.home.HomeActivity" />
         <activity android:name=".ui.login.LoginActivity">
             <intent-filter>
